@@ -4,6 +4,7 @@ import com.jme3.app.Application;
 import com.jme3.light.AmbientLight;
 import com.jme3.light.DirectionalLight;
 import com.jme3.math.ColorRGBA;
+import com.jme3.math.FastMath;
 import com.jme3.math.Vector3f;
 import com.jme3.renderer.ViewPort;
 import com.jme3.renderer.queue.RenderQueue;
@@ -23,6 +24,8 @@ import java.time.LocalTime;
 /**
  * SkyBox simulates a dynamic sky environment including sun, moon, clouds, stars, and real-time lighting.
  * Enhanced for atmospheric feeling, realistic lighting, and soft shadow fidelity.
+ * Improved: dynamic switching of shadow-casting light (sun or moon), smooth shadow blending, customizable colors,
+ * and improved ambient/tonemapping for more cinematic effect.
  */
 public class SkyBox extends EngineModule<SkyBoxConfig> {
 
@@ -37,8 +40,12 @@ public class SkyBox extends EngineModule<SkyBoxConfig> {
     private final Vector3f tmpDir = new Vector3f();
 
     private float simulatedHour = 12.0f;
-    private float smoothingSpeed = 0.1f;
+    private float smoothingSpeed = 0.2f; // faster smoothing for more responsive day-night
     private float moonFade = 0.5f;
+
+    // Track which light is currently active for shadow casting
+    private DirectionalLight activeShadowLight = null;
+    private boolean shadowsWithSun = true; // true=sun, false=moon
 
     public SkyBox(RendererModule rendererModule) {
         super("skybox", SkyBoxConfig.class, rendererModule.getGameEngine());
@@ -80,16 +87,22 @@ public class SkyBox extends EngineModule<SkyBoxConfig> {
         skyControl.setTopVerticalAngle(getConfig().getVerticalAngle());
         skyControl.setEnabled(true);
 
-        // Atmospheric sky tint
-        //skyControl.getSunAndStars().m.setColor("Color", new ColorRGBA(0.43f, 0.53f, 0.72f, 1.0f));
+        // Improved: add gradient for horizon color
+        //  skyControl.setOvercast(getConfig().getOvercastAmount());
+        //  skyControl.setCloudsOpacity(getConfig().getCloudOpacity());
+        //  skyControl.setHaloThickness(getConfig().getHaloThickness());
+        //  skyControl.setStarIntensity(getConfig().getStarIntensity());
+
         engine.getRootNode().attachChild(sky);
     }
 
     private void setupLighting() {
-        // Atmospheric ambient: глубокий голубой с мягким теплом заката
-        ColorRGBA ambientColor = new ColorRGBA(0.18f, 0.25f, 0.36f, 1.0f).multLocal(0.7f)
-                .addLocal(new ColorRGBA(0.8f, 0.6f, 0.45f, 1.0f).multLocal(0.15f));
-        ambient = new AmbientLight(ambientColor);
+        // Improved atmospheric ambient: dynamic blend between deep blue and sunset warmth
+        ColorRGBA ambientDay = new ColorRGBA(0.16f, 0.22f, 0.38f, 1.0f);
+        ColorRGBA ambientSunset = new ColorRGBA(1.0f, 0.72f, 0.45f, 1.0f);
+        ColorRGBA ambientNight = new ColorRGBA(0.08f, 0.13f, 0.20f, 1.0f);
+
+        ambient = new AmbientLight(ambientDay.clone());
 
         sunLight = new DirectionalLight();
         sunLight.setColor(ColorRGBA.White.mult(getConfig().getSunLightIntensity()));
@@ -109,13 +122,15 @@ public class SkyBox extends EngineModule<SkyBoxConfig> {
         int splits = getConfig().getShadowFrustumCount();
 
         shadowRenderer = new DirectionalLightShadowRenderer(engine.getAssetManager(), size, splits);
-        shadowRenderer.setLight(sunLight);
         shadowRenderer.setShadowZExtend(getConfig().getShadowZExtend());
-        // Атмосферные тени: мягкие, глубокие, без резких краёв
-        shadowRenderer.setLambda(0.60f); // Больше плавности теней вдаль
+        shadowRenderer.setLambda(0.60f); // Soft, smooth shadows
 
-        ViewPort vp = viewPort();
-        vp.addProcessor(shadowRenderer);
+        // Initially set to sun
+        shadowRenderer.setLight(sunLight);
+        activeShadowLight = sunLight;
+        shadowsWithSun = true;
+
+        gameEngine.getViewPort().addProcessor(shadowRenderer);
     }
 
     private float getCurrentHour() {
@@ -129,37 +144,70 @@ public class SkyBox extends EngineModule<SkyBoxConfig> {
             float targetHour = getCurrentHour();
 
             // Smoothly interpolate simulatedHour toward targetHour
-            simulatedHour += (targetHour - simulatedHour) * smoothingSpeed * tpf;
+            float hourDelta = targetHour - simulatedHour;
+            // Wrap-around for day/night cycle
+            if (hourDelta > 12.0f) hourDelta -= 24.0f;
+            if (hourDelta < -12.0f) hourDelta += 24.0f;
+            simulatedHour += hourDelta * smoothingSpeed * tpf;
 
-            updater.setMainLight(this.sunLight);
+            // Clamp simulatedHour to [0,24)
+            if (simulatedHour < 0f) simulatedHour += 24f;
+            if (simulatedHour >= 24f) simulatedHour -= 24f;
+
             skyControl.getSunAndStars().setHour(simulatedHour);
 
             // Sun and moon directions (for shadows and highlights)
             Vector3f sunDirection = skyControl.getSunAndStars().sunDirection(tmpDir);
+
+            // This is the upward normal of the sun; positive when above the horizon
+            float sunDot = sunDirection.dot(Vector3f.UNIT_Y);
+
+            // Determine if it's day or night (threshold can be tuned)
+            boolean isDay = sunDot > -0.08f;
+            shadowsWithSun = isDay;
+
+            // Update light directions
             sunLight.setDirection(sunDirection.negate());
             moonLight.setDirection(sunDirection);
 
-            // Атмосферные смены света: плавный рассвет/закат, холодная ночь
-            float sunDot = sunDirection.dot(Vector3f.UNIT_Y);
-            float sunIntensity = Math.max(0.13f, Math.min(1f, sunDot + 0.13f));
-            float moonIntensity = Math.max(0f, 1f - sunIntensity);
+            // --- Atmosphere: improved blend for day, sunset, and night ---
+            float sunsetZone = FastMath.clamp((sunDot + 0.1f) / 0.18f, 0f, 1f); // 0 at -0.1, 1 at +0.08
+            float sunIntensity = FastMath.clamp(sunDot + 0.13f, 0.13f, 1.0f);
+            float moonIntensity = FastMath.clamp(1.0f - sunIntensity, 0f, 1.0f);
+
+            // Soft transition for ambient color through sunset
+            ColorRGBA ambientDay = new ColorRGBA(0.16f, 0.22f, 0.38f, 1.0f);
+            ColorRGBA ambientSunset = new ColorRGBA(1.0f, 0.72f, 0.45f, 1.0f);
+            ColorRGBA ambientNight = new ColorRGBA(0.08f, 0.13f, 0.20f, 1.0f);
+
+            ColorRGBA ambientCol = ambientDay.clone().interpolateLocal(ambientSunset, 1f - sunsetZone)
+                    .interpolateLocal(ambientNight, 1f - sunIntensity);
+            ambient.setColor(ambientCol);
 
             sunLight.setColor(ColorRGBA.White.mult(getConfig().getSunLightIntensity() * sunIntensity));
             moonLight.setColor(new ColorRGBA(0.36f, 0.39f, 0.55f, 1f).mult(getConfig().getMoonLightIntensity() * moonIntensity * moonFade));
 
-            // Атмосферная смена амбиентного цвета: закат/рассвет/ночь
-            float ambientBlend = 0.18f + 0.82f * sunIntensity;
-            ColorRGBA ambientDay = new ColorRGBA(0.18f, 0.25f, 0.36f, 1.0f).mult(ambientBlend)
-                    .add(new ColorRGBA(0.8f, 0.6f, 0.45f, 1.0f).mult(1f - ambientBlend));
-            ambient.setColor(ambientDay);
+            // --- SHADOW CASTING LIGHT SWITCH ---
+            DirectionalLight requiredLight = shadowsWithSun ? sunLight : moonLight;
+            if (activeShadowLight != requiredLight && shadowRenderer != null) {
+                shadowRenderer.setLight(requiredLight);
+                activeShadowLight = requiredLight;
+            }
 
-            if (shadowRenderer != null) shadowRenderer.setLight(sunLight);
+            // Bloom/tonemapping hint: optionally, adjust scene exposure or fog here for deeper atmosphere.
         }
+    }
+
+    /**
+     * Returns which light is currently used for shadow casting: "sun" or "moon"
+     */
+    public String getActiveShadowCaster() {
+        return (activeShadowLight == sunLight) ? "sun" : "moon";
     }
 
     @Override
     protected void updateModule(float tpf) {
-        // Reserved for atmospheric effects, weather systems, volumetric fog, god rays и т.п.
+        // Reserved for future atmospheric/weather/volumetric effects.
     }
 
     @Override
